# AI-Interview-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: backend-senior.md  data-engineer.md  qa-engineer.md
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: main.py
app/api/v1/endpoints/: health.py
app/core/: config.py  database.py  security.py
app/models/: common.py
tests/: test_auth.py  test_health.py
